--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,34 @@
+:root {
+  --dark: #32292f;
+  --mid: #a47963;
+  --light: #f0f7f4;
+}
+
+/* html { background-color: var(--dark); } */
+
+.mid-color {
+  background-color: var(--mid);
+}
+
+.light-color {
+  background-color: var(--light);
+}
+
+
+.form-wrapper {
+  margin: auto;
+  width: 600px;
+}
+
+.form-checkbox {
+  text-align: left;
+}
+
+.input-field {
+  display: block;
+}
+
+
 .App {
   text-align: center;
 }
@@ -15,5 +46,9 @@
 }
 
 .libraryDetails {
-  margin-top: 4rem;
+  background-color: var(--dark);
+}
+
+.libraryDetails p {
+  color: var(--light);
 }
