--- a/client/src/App.css
+++ b/client/src/App.css
@@ -45,8 +45,20 @@
   margin-top: 3rem;
 }
 
+.libraryContainer {
+  display: flex;
+}
+
 .libraryDetails {
   background-color: var(--dark);
+  width: 60%;
+}
+.libraryDetails img {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 50%;
+  margin: 30px 0;
 }
 
 .libraryDetails p {
