--- a/client/src/App.css
+++ b/client/src/App.css
@@ -45,22 +45,40 @@
   margin-top: 3rem;
 }
 
+/* library details */
+
 .libraryContainer {
   display: flex;
 }
 
 .libraryDetails {
   background-color: var(--dark);
-  width: 60%;
+  width: 80%;
 }
+
 .libraryDetails img {
-  width: 200px;
-  height: 200px;
+  width: 300px;
+  height: 300px;
   object-fit: cover;
-  border-radius: 50%;
-  margin: 30px 0;
+  border-radius: 10%;
+  margin: 20px;
 }
 
 .libraryDetails p {
   color: var(--light);
+}
+
+@media screen and (max-width: 500px) {
+  .libraryContainer {
+    flex-direction: column;
+  }
+
+  .libraryDetails {
+    width: 100%;
+  }
+
+  .libraryDetails img {
+    width: 90%;
+
+  }
 }
