--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,8 +4,6 @@
   --light: #f0f7f4;
 }
 
-/* html { background-color: var(--dark); } */
-
 .mid-color {
   background-color: var(--mid);
 }
@@ -14,6 +12,28 @@
   background-color: var(--light);
 }
 
+/* top level */
+.App {
+  text-align: center;
+}
+
+.main-container {
+  margin-top: 0.13rem;
+}
+
+.footer {
+  background-color: var(--dark);
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+}
+
+.footer p {
+  color: var(--light);
+}
+
+
+/* form */
 
 .form-wrapper {
   margin: auto;
@@ -26,15 +46,6 @@
 
 .input-field {
   display: block;
-}
-
-
-.App {
-  text-align: center;
-}
-
-.main-container {
-  margin-top: 0.13rem;
 }
 
 .search {
@@ -68,7 +79,22 @@
   color: var(--light);
 }
 
+/* fulll screen */
+@media screen and (min-width: 501px) {
+  html {
+    height: 100%;
+  }
+
+  body {
+    height: 100%;
+  }
+}
+
+
+
+/* compact screen */
 @media screen and (max-width: 500px) {
+
   .libraryContainer {
     flex-direction: column;
   }
@@ -79,6 +105,9 @@
 
   .libraryDetails img {
     width: 90%;
+  }
 
+  #navbar-title {
+    font-size: 12pt;
   }
 }
